--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/eigenteam/eigen-git-mirror
 [submodule "src/test/googletest"]
 	path = src/test/googletest
-	url = https://github.com/google/googletest.git
+	url = https://github.com/GerHobbelt/googletest.git
