--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "eigen"]
 	path = eigen
-	url = https://github.com/eigenteam/eigen-git-mirror
+	url = git@github.com:eigenteam/eigen-git-mirror
 [submodule "src/test/googletest"]
 	path = src/test/googletest
 	url = git@github.com:GerHobbelt/googletest.git
